--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,15 +17,31 @@ layout: default
     {{ content }}
 </p>
 
+<p>
+    <script src="https://utteranc.es/client.js"
+        repo="anuraj/anuraj.github.io"
+        issue-term="url"
+        label="Blog"
+        theme="preferred-color-scheme"
+        crossorigin="anonymous"
+        async>
+    </script>
+</p>
+
 <div class="py-5 text-center text-body-secondary border-top">
     <p class="ms-2 me-2">
-        Copyright &copy; {{ site.time | date: '%Y' }}&nbsp;<a class="text-body-emphasis text-decoration-none" href="{{site.url}}/about">Anuraj</a>. Blog content
+        Copyright &copy; {{ site.time | date: '%Y' }}&nbsp;<a class="text-body-emphasis text-decoration-none"
+            href="{{site.url}}/about">Anuraj</a>. Blog content
         licensed under the Creative
-        Commons&nbsp;<a class="text-body-emphasis text-decoration-none" href="https://creativecommons.org/licenses/by/2.5/" rel="noopener" target="_blank">CC BY
+        Commons&nbsp;<a class="text-body-emphasis text-decoration-none"
+            href="https://creativecommons.org/licenses/by/2.5/" rel="noopener" target="_blank">CC BY
             2.5</a> |
-        Unless otherwise stated or granted, code samples licensed under the <a class="text-body-emphasis text-decoration-none" href="https://anuraj.mit-license.org/"
-            rel="noopener" target="_blank">MIT license</a>. This is a
+        Unless otherwise stated or granted, code samples licensed under the <a
+            class="text-body-emphasis text-decoration-none" href="https://anuraj.mit-license.org/" rel="noopener"
+            target="_blank">MIT license</a>. This is a
         personal blog. The opinions expressed here
-        represent my own and not those of my employer. Powered by Jekyll. Hosted with ❤ by <a class="text-body-emphasis text-decoration-none" href="https://github.com/" rel="noopener" target="_blank">GitHub</a>
+        represent my own and not those of my employer. Powered by Jekyll. Hosted with ❤ by <a
+            class="text-body-emphasis text-decoration-none" href="https://github.com/" rel="noopener"
+            target="_blank">GitHub</a>
     </p>
 </div>
