--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@ layout: compress
                 </a>
 
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">About</a>
+                    <!-- <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">About</a> -->
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/blog">Blog</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book">Book</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contact">Contact</a>
+                    <!-- <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contact">Contact</a> -->
                 </nav>
             </div>
         </header>
