--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,15 @@ layout: compress
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "kej56zdl1c");
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G3KMCYPPL3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-G3KMCYPPL3');
+    </script>
 </body>
 
 </html>
