--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,21 @@ layout: default
         </script>
 </p>
 
+<div class="row mb-4">
+    <div class="col-md-6">
+        {% if page.previous.url %}
+        <a class="text-body-emphasis text-decoration-none" href="{{page.previous.url}}">
+            &laquo; {{page.previous.title}}
+        </a>
+        {% endif %}
+    </div>
+    <div class="col-md-6 text-end">
+        {% if page.next.url %}
+        <a class="text-body-emphasis text-decoration-none" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+        {% endif %}
+    </div>
+</div>
+
 <div class="py-5 text-center text-body-secondary border-top">
     <p class="ms-2 me-2">
         Copyright &copy; {{ site.time | date: '%Y' }}&nbsp;<a class="text-body-emphasis text-decoration-none"
