--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 ---
-layout: compress
+layout: default
 ---
 
 <!doctype html>
@@ -33,7 +33,7 @@ layout: compress
                     <!-- <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">About</a> -->
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/blog">Blog</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book">Book</a>
-                    <!-- <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contact">Contact</a> -->
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contact">Contact</a>
                 </nav>
             </div>
         </header>
@@ -44,38 +44,19 @@ layout: compress
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G3KMCYPPL3"></script>
     <script>
-        var images = document.getElementsByTagName("img");
-        for (var i = 0; i < images.length; i++) {
-            var el = images[i];
-            if (!el.getAttribute("class")) {
-                el.setAttribute("class", "img-fluid");
-            }
-        }
-        var tables = document.getElementsByTagName("table");
-        for (var i = 0; i < tables.length; i++) {
-            var el = tables[i];
-            if (!el.getAttribute("class")) {
-                el.setAttribute("class", "table table-bordered");
-            }
-        }
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-G3KMCYPPL3');
     </script>
-
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
             t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "kej56zdl1c");
-    </script>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G3KMCYPPL3"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-G3KMCYPPL3');
     </script>
 </body>
 
