Cookie Yes Banner added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: compress
 ---
 
 <!doctype html>
@@ -58,6 +58,9 @@ layout: default
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "kej56zdl1c");
     </script>
+    <!-- Start cookieyes banner --> 
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/d78e24c7014f859f0f5b23c8/script.js"></script> 
+    <!-- End cookieyes banner -->
 </body>
 
 </html>
