Moved to giscus for comments.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,14 +14,27 @@ layout: default
     <span class="badge rounded-pill text-bg-secondary">{{ category }}</span>
     {% endfor %}
 </p>
-<p>
+<div class="lead">
     {{ content }}
-</p>
+</div>
 
 <p>
-    <script src="https://utteranc.es/client.js" repo="anuraj/anuraj.github.io" issue-term="url" label="Blog"
-        theme="preferred-color-scheme" crossorigin="anonymous" async>
-        </script>
+    <script src="https://giscus.app/client.js"
+        data-repo="anuraj/anuraj.github.io"
+        data-repo-id="R_kgDOK-YniA"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOK-YniM4CcG3C"
+        data-mapping="url"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="dark"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+    </script>
 </p>
 
 <div class="row mb-4">
