--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@ layout: compress
                     <!-- <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">About</a> -->
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/blog">Blog</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book">Book</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/Archives">Archives</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contact">Contact</a>
                 </nav>
             </div>
