--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,45 +29,13 @@ layout: compress
 
 <body>
     <div class="container py-3">
-        <header>
-            <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-                <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-                    <span class="fs-4">Anuraj</span>
-                </a>
-
-                <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                    <!-- <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">About</a> -->
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/blog">Blog</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book">Book</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/archives">Archives</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contact">Contact</a>
-                </nav>
-            </div>
-        </header>
-        <main  class="container py-3">
+        {% include header.html %}
+        <main>
             {{ content }}
         </main>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G3KMCYPPL3"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-G3KMCYPPL3');
-    </script>
-    <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "kej56zdl1c");
-    </script>
-    {% if jekyll.environment != "development" %}
-        <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/d78e24c7014f859f0f5b23c8/script.js"></script> 
-    {% endif %}
+    
+    {% include scripts.html %}
     
 </body>
 
