--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,14 @@
 layout: default
 ---
 
-<p>
-    {{ content }}
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>{{ page.title }}</h1>
+            <p class="lead">{{ page.subtitle }}</p>
+        </div>
+    </div>
+    <div class="row">
+        {{ content }}
+    </div>
+</div>
