Include move to top option

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,13 @@ layout: default
 <div class="lead">
     {{ content }}
 </div>
+<button class="btn btn-secondary position-fixed bottom-0 end-0 mb-3 me-3" title="Go to top" onclick="javascript:GotoTop();">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+    <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5"/>
+    </svg>
+</button>
 
+{% if jekyll.environment != "development" %}
 <p>
     <script src="https://giscus.app/client.js"
         data-repo="anuraj/anuraj.github.io"
@@ -36,6 +42,7 @@ layout: default
         async>
     </script>
 </p>
+{% endif %}
 
 <div class="row mb-4">
     <div class="col-md-6">
@@ -89,5 +96,9 @@ layout: default
         popupImage.setAttribute("src", src);
         var popup = new bootstrap.Modal(document.getElementById('ImagePopup'));
         popup.show();
+    }
+
+    function GotoTop() {
+        window.scrollTo(0, 0);
     }
 </script>
