AdSense code added.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,10 @@ layout: compress
     {% endif %}
     <meta name="google-adsense-account" content="ca-pub-2446392180502199">
     {% seo %}
+    {% if page.layout == "post" %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2446392180502199"
+     crossorigin="anonymous"></script>
+     {% endif %}
 </head>
 
 <body>
