Theme switch option added.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,13 @@
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book">Book</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/archives">Archives</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contact">Contact</a>
+            <a id="ToggleTheme" class="me-3 py-2 link-body-emphasis text-decoration-none" style="margin-top: -0.10rem !important;"
+                href="javascript:;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-circle-half" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 0 8 1zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16"></path>
+                </svg>
+            </a>
         </nav>
     </div>
 </header>
