--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -18,3 +18,45 @@
 {% if jekyll.environment != "development" %}
     <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/d78e24c7014f859f0f5b23c8/script.js"></script> 
 {% endif %}
+
+<script>
+    const getStoredTheme = () => localStorage.getItem('theme');
+    const setStoredTheme = theme => localStorage.setItem('theme', theme);
+    
+    const getPreferredTheme = () => {
+        const storedTheme = getStoredTheme();
+        if (storedTheme) {
+            return storedTheme;
+        }
+
+        return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+    };
+
+    const setTheme = theme => {
+        if (theme === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+            document.documentElement.setAttribute('data-bs-theme', 'dark');
+        } else {
+            document.documentElement.setAttribute('data-bs-theme', theme);
+        }
+    };
+
+    setTheme(getPreferredTheme());
+
+    window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
+        const storedTheme = getStoredTheme();
+        if (storedTheme !== 'light' && storedTheme !== 'dark') {
+            setTheme(getPreferredTheme());
+        }
+    });
+
+    document.querySelector('#ToggleTheme').addEventListener('click', () => {
+        const storedTheme = getStoredTheme();
+        if (storedTheme === 'light') {
+            setStoredTheme('dark');
+            setTheme('dark');
+        } else {
+            setStoredTheme('light');
+            setTheme('light');
+        }
+    });
+</script>
