--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,7 @@
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/archives">Archives</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contact">Contact</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="https://www.buymeacoffee.com/anuraj.dev" target="_blank" rel="noopener noreferrer">
+                <img src="/assets/buymecoffee.gif" alt="Buy Me a Coffee" style="height: 16px; width: 16px; margin-top: -0.10rem !important;">
                 Buy Me a Coffee</a>
             <a id="ToggleTheme" class="me-3 py-2 link-body-emphasis text-decoration-none" style="margin-top: -0.10rem !important;"
                 href="javascript:;">
