Support option added

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,23 @@ layout: default
     </svg>
 </button>
 
-<div class="card text-center">
+<div class="card text-center mb-3">
+  <div class="card-header">
+    Support My Work
+  </div>
+  <div class="card-body">
+    <p class="card-text">
+        If you find my content helpful, consider supporting my work. Your support helps me continue creating valuable
+        resources for the community.
+    </p>
+    <a class="btn btn-primary" href="https://www.buymeacoffee.com/anuraj.dev" target="_blank" rel="noopener noreferrer">
+        <img src="/assets/buymecoffee.gif" alt="Buy Me a Coffee" style="height: 16px; width: 16px; margin-top: -0.10rem !important;">
+        Buy Me a Coffee
+    </a>
+  </div>
+</div>
+
+<div class="card text-center mb-3">
   <div class="card-header">
     Share this article
   </div>
