--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,10 +32,7 @@ layout: default
         If you find my content helpful, consider supporting my work. Your support helps me continue creating valuable
         resources for the community.
     </p>
-    <a class="btn btn-primary" href="https://www.buymeacoffee.com/anuraj.dev" target="_blank" rel="noopener noreferrer">
-        <img src="/assets/buymecoffee.gif" alt="Buy Me a Coffee" style="height: 16px; width: 16px; margin-top: -0.10rem !important;">
-        Buy Me a Coffee
-    </a>
+    <a href="https://www.buymeacoffee.com/anuraj.dev"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=anuraj.dev&button_colour=FFDD00&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=ffffff" /></a>
   </div>
 </div>
 
