--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,10 @@
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <!-- <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">About</a> -->
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/blog">Blog</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/book">Book</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/archives">Archives</a>
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/blog/feed.rss">Feed</a>
             <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/contact">Contact</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="https://www.buymeacoffee.com/anuraj.dev" target="_blank" rel="noopener noreferrer">
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none text-nowrap" href="https://www.buymeacoffee.com/anuraj.dev" target="_blank" rel="noopener noreferrer">
                 Buy Me a Coffee</a>
             <a id="ToggleTheme" class="me-3 py-2 link-body-emphasis text-decoration-none" style="margin-top: -0.10rem !important;"
                 href="javascript:;">
