Refactor code structure for improved readability and maintainability

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,9 @@ layout: default
         If you find my content helpful, consider supporting my work. Your support helps me continue creating valuable
         resources for the community.
     </p>
-    <a href="https://www.buymeacoffee.com/anuraj.dev"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=anuraj.dev&button_colour=FFDD00&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=ffffff" /></a>
+    <a href="https://www.buymeacoffee.com/anuraj.dev">
+        <img src="{{ site.url }}/assets/orange-button.png" alt="Buy me a coffee">
+    </a>
   </div>
 </div>
 
