Adjust button image height for better visibility

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: default
         resources for the community.
     </p>
     <a href="https://www.buymeacoffee.com/anuraj.dev">
-        <img src="{{ site.url }}/assets/orange-button.png" alt="Buy me a coffee">
+        <img src="{{ site.url }}/assets/orange-button.png" height="50" style="height: 50px;" alt="Buy me a coffee">
     </a>
   </div>
 </div>
