Open support link in a new tab

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ layout: default
         If you find my content helpful, consider supporting my work. Your support helps me continue creating valuable
         resources for the community.
     </p>
-    <a href="https://www.buymeacoffee.com/anuraj.dev">
+    <a target="_blank" href="https://www.buymeacoffee.com/anuraj.dev">
         <img src="{{ site.url }}/assets/orange-button.png" height="50" style="height: 50px;" alt="Buy me a coffee">
     </a>
   </div>
