Update repository reference for Utteranc comments integration

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -91,7 +91,7 @@ layout: default
     </script>
     -->
     <script src="https://utteranc.es/client.js"
-        repo="anuraj.github.io"
+        repo="anuraj/anuraj.github.io"
         issue-term="pathname"
         theme="preferred-color-scheme"
         crossorigin="anonymous"
